[gd_scene load_steps=55 format=3 uid="uid://qxpkpsl61uyc"]

[ext_resource type="Shader" uid="uid://revdxr7x06s5" path="res://Hallasan-Sunset/Shaders/Shadow.gdshader" id="1_f1wee"]
[ext_resource type="Script" uid="uid://3eugq3lyyivt" path="res://Hallasan-Sunset/Enemies/Scripts/States/Enemy.gd" id="2_502qb"]
[ext_resource type="Texture2D" uid="uid://cteqajjg7vj0h" path="res://Hallasan-Sunset/Tilemaps/Sprites/Dusk_Icons_x24.png" id="3_3y0f7"]
[ext_resource type="Texture2D" uid="uid://dieyxajh633f3" path="res://Hallasan-Sunset/Enemies/Common Enemies/Turret/Sprites/Vine Turret fullsheet.png" id="4_16wit"]
[ext_resource type="PackedScene" uid="uid://b5rmod0fwgoy" path="res://Hallasan-Sunset/Player/Boxes/HurtBox/hurt_box.tscn" id="5_6pau6"]
[ext_resource type="Script" uid="uid://cw4vkck68lt22" path="res://Hallasan-Sunset/Enemies/Scripts/States/enemy_state_machine.gd" id="7_og3kj"]
[ext_resource type="Script" uid="uid://brlcx1u3weeem" path="res://Hallasan-Sunset/Enemies/Scripts/States/enemy_state_idle.gd" id="8_xf5bn"]
[ext_resource type="Script" uid="uid://dkqddec3hu23w" path="res://Hallasan-Sunset/Enemies/Scripts/States/enemy_state_wander.gd" id="9_8kjo8"]
[ext_resource type="Script" uid="uid://du2e0pgg12551" path="res://Hallasan-Sunset/Enemies/Scripts/States/enemy_state_stun.gd" id="10_qh8g5"]
[ext_resource type="Script" uid="uid://nj1ai8bhfcju" path="res://Hallasan-Sunset/Enemies/Common Enemies/Slime/Destroy.gd" id="11_r5fga"]
[ext_resource type="Script" uid="uid://ocaacixauwww" path="res://Hallasan-Sunset/Enemies/Technical/Drop Data/drop_data.gd" id="12_cbaqg"]
[ext_resource type="Resource" uid="uid://c3cx0nodai8jq" path="res://Hallasan-Sunset/Items/Currency/Gem/Gem.tres" id="13_j348p"]
[ext_resource type="Script" uid="uid://jwnndw8cqhed" path="res://Hallasan-Sunset/Enemies/Scripts/States/enemy_state_chase.gd" id="14_ryxua"]
[ext_resource type="Script" uid="uid://dg4gnhra48r6m" path="res://Hallasan-Sunset/Enemies/Scripts/States/enemy_state_shoot.gd" id="15_h8st5"]
[ext_resource type="PackedScene" uid="uid://djihtmauie3ou" path="res://Hallasan-Sunset/Enemies/Common Enemies/Turret/energy_projectile.tscn" id="16_mu5so"]
[ext_resource type="PackedScene" uid="uid://bu0yfb7p2b8pi" path="res://Hallasan-Sunset/Player/Boxes/HitBox/hit_box.tscn" id="17_ek3iy"]
[ext_resource type="Texture2D" uid="uid://dbl07ag0yb620" path="res://Hallasan-Sunset/Enemies/Common Enemies/Slime/DestroySmoke.png" id="18_i1etq"]
[ext_resource type="PackedScene" uid="uid://c55aho78pvpy8" path="res://Hallasan-Sunset/Enemies/Technical/Vision Area/Vision_area.tscn" id="19_dn3gb"]
[ext_resource type="Texture2D" uid="uid://c17eubopfjeqt" path="res://Hallasan-Sunset/Enemies/Common Enemies/Tree Stump/Lost_Heart.png" id="20_ah2jj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3wgaj"]
shader = ExtResource("1_f1wee")
shader_parameter/xframe = 0
shader_parameter/yframe = 0
shader_parameter/xframe_count = 6
shader_parameter/yframe_count = 6
shader_parameter/sunPos = Vector3(0, 0, 0)
shader_parameter/glow_color = Color(0, 0, 0, 1)
shader_parameter/modulate_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_oj8qu"]
atlas = ExtResource("3_3y0f7")
region = Rect2(219, 98, 19, 19)

[sub_resource type="Gradient" id="Gradient_tgach"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vvm3s"]
gradient = SubResource("Gradient_tgach")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_m2mbc"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape_scale = Vector3(2, 2, 2)
emission_shape = 1
emission_sphere_radius = 5.78
direction = Vector3(1, -1, 2)
spread = 90.0
initial_velocity_min = 200.0
initial_velocity_max = 400.0
gravity = Vector3(0, 700, 0)
damping_min = 100.0
damping_max = 700.0
scale_min = 0.5
scale_max = 0.7
color_ramp = SubResource("GradientTexture1D_vvm3s")

[sub_resource type="CircleShape2D" id="CircleShape2D_4t8og"]
radius = 13.3333

[sub_resource type="Animation" id="Animation_43nvg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../GPUParticles2D2:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_icuu7"]
resource_name = "destroy_down"
length = 2.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 2.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../GPUParticles2D2:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "animation"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../DestroyEffectSprite/AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": PackedStringArray("destroy"),
"times": PackedFloat32Array(1.3)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_v8x5m"]
resource_name = "destroy_side"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../GPUParticles2D2:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "animation"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../DestroyEffectSprite/AnimationPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": PackedStringArray("destroy"),
"times": PackedFloat32Array(0.2)
}

[sub_resource type="Animation" id="Animation_5y0yj"]
resource_name = "destroy_up"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../GPUParticles2D2:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "animation"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../DestroyEffectSprite/AnimationPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": PackedStringArray("destroy"),
"times": PackedFloat32Array(0.2)
}

[sub_resource type="Animation" id="Animation_io8m7"]
resource_name = "hurt_down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_h5023"]
resource_name = "hurt_side"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1.07177, 1),
"update": 1,
"values": [6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_nwft8"]
resource_name = "hurt_up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ehjij"]
resource_name = "idle_down"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_j4167"]
resource_name = "idle_side"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [18, 19, 20]
}

[sub_resource type="Animation" id="Animation_aejnc"]
resource_name = "idle_up"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_up47f"]
resource_name = "shoot_down"
length = 0.8
loop_mode = 2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [15, 16, 17]
}

[sub_resource type="Animation" id="Animation_5s5q0"]
resource_name = "walk_down"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [13, 14, 15]
}

[sub_resource type="Animation" id="Animation_gjbwl"]
resource_name = "walk_side"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [18, 19, 20]
}

[sub_resource type="Animation" id="Animation_uvbdk"]
resource_name = "walk_up"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_emwhk"]
_data = {
&"RESET": SubResource("Animation_43nvg"),
&"destroy_down": SubResource("Animation_icuu7"),
&"destroy_side": SubResource("Animation_v8x5m"),
&"destroy_up": SubResource("Animation_5y0yj"),
&"hurt_down": SubResource("Animation_io8m7"),
&"hurt_side": SubResource("Animation_h5023"),
&"hurt_up": SubResource("Animation_nwft8"),
&"idle_down": SubResource("Animation_ehjij"),
&"idle_side": SubResource("Animation_j4167"),
&"idle_up": SubResource("Animation_aejnc"),
&"shoot_down": SubResource("Animation_up47f"),
&"walk_down": SubResource("Animation_5s5q0"),
&"walk_side": SubResource("Animation_gjbwl"),
&"walk_up": SubResource("Animation_uvbdk")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7ovf5"]
radius = 5.0
height = 20.0

[sub_resource type="Resource" id="Resource_bb5ic"]
script = ExtResource("12_cbaqg")
item = ExtResource("13_j348p")
probability = 100.0
min_amount = 3
max_amount = 3

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e5ybd"]
radius = 9.33333
height = 18.6667

[sub_resource type="Animation" id="Animation_uni4i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_wnxxk"]
resource_name = "destroy"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s7gr4"]
_data = {
&"RESET": SubResource("Animation_uni4i"),
&"destroy": SubResource("Animation_wnxxk")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_gfs4t"]
radius = 13.6528

[sub_resource type="Gradient" id="Gradient_jkxkh"]
offsets = PackedFloat32Array(0.297989, 0.954296)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_hoft3"]
gradient = SubResource("Gradient_jkxkh")

[sub_resource type="Curve" id="Curve_l5868"]
_limits = [-200.0, 200.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_8syhs"]
curve = SubResource("Curve_l5868")

[sub_resource type="Curve" id="Curve_tsrgo"]
_limits = [0.0, 3.0, 0.0, 1.0]
_data = [Vector2(0.0214876, 0.347087), 0.0, 0.0, 0, 0, Vector2(0.985124, 0.69501), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_j4h68"]
curve = SubResource("Curve_tsrgo")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nievx"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 43.01
radial_velocity_min = -2.23517e-05
radial_velocity_max = 50.0
gravity = Vector3(0, -80, 0)
linear_accel_curve = SubResource("CurveTexture_8syhs")
scale_max = 1.5
scale_over_velocity_curve = SubResource("CurveTexture_j4h68")
color_ramp = SubResource("GradientTexture1D_hoft3")

[node name="Turret" type="CharacterBody2D"]
z_index = 1
material = SubResource("ShaderMaterial_3wgaj")
collision_layer = 256
collision_mask = 17
script = ExtResource("2_502qb")
hp = 2
xp_reward = 25

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(0, -24)
emitting = false
amount = 4
texture = SubResource("AtlasTexture_oj8qu")
lifetime = 0.6
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_m2mbc")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -24)
texture = ExtResource("4_16wit")
hframes = 6
vframes = 8
frame = 12

[node name="AttackHurtBox" parent="Sprite" instance=ExtResource("5_6pau6")]
unique_name_in_owner = true
position = Vector2(0, 17)
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/AttackHurtBox"]
position = Vector2(0, -2.66667)
shape = SubResource("CircleShape2D_4t8og")
debug_color = Color(0, 0.6, 0.7, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
libraries = {
&"": SubResource("AnimationLibrary_emwhk")
}
autoplay = "idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1.98952e-13, -5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_7ovf5")

[node name="EnemyStateMachine" type="Node" parent="."]
script = ExtResource("7_og3kj")

[node name="Idle" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("after_idle_state")]
script = ExtResource("8_xf5bn")
after_idle_state = NodePath(".")

[node name="Wander" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("9_8kjo8")
wander_speed = 30.0
state_animation_duration = 0.7
next_state = NodePath("../Idle")

[node name="Stun" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("10_qh8g5")
knockback_speed = 0.0
decelerate_speed = 0.0
next_state = NodePath("../Shoot")

[node name="Destroy" type="Node" parent="EnemyStateMachine"]
script = ExtResource("11_r5fga")
drops = Array[ExtResource("12_cbaqg")]([SubResource("Resource_bb5ic")])

[node name="Chase" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("vision_area", "attack_area", "next_state")]
script = ExtResource("14_ryxua")
chase_speed = 80.0
vision_area = NodePath("../../VisionArea")
attack_area = NodePath("../../Sprite/AttackHurtBox")
state_aggro_duration = 3.0
next_state = NodePath("../Wander")

[node name="Shoot" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("vision_area", "attack_area", "next_state")]
script = ExtResource("15_h8st5")
ENERGY_BALL_SCENE = ExtResource("16_mu5so")
vision_area = NodePath("../../VisionArea")
attack_area = NodePath("../../Sprite/AttackHurtBox")
next_state = NodePath("../Idle")

[node name="Timer" type="Timer" parent="EnemyStateMachine/Shoot"]
autostart = true

[node name="HitBox" parent="." instance=ExtResource("17_ek3iy")]
collision_mask = 1

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -32)
scale = Vector2(3, 3)
shape = SubResource("CapsuleShape2D_e5ybd")
debug_color = Color(0.925, 0.216, 0.424, 0)

[node name="DestroyEffectSprite" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -13)
texture = ExtResource("18_i1etq")
hframes = 6
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="DestroyEffectSprite"]
libraries = {
&"": SubResource("AnimationLibrary_s7gr4")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
max_polyphony = 4

[node name="hurt_box" parent="." instance=ExtResource("5_6pau6")]
damage = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt_box"]
position = Vector2(0, -11)
shape = SubResource("CircleShape2D_gfs4t")
debug_color = Color(0, 0.6, 0.7, 0)

[node name="VisionArea" parent="." instance=ExtResource("19_dn3gb")]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VisionArea"]
polygon = PackedVector2Array(-16, -5, 17, -6, 177, 181, -199, 189)

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
texture_filter = 1
position = Vector2(0, -26)
emitting = false
amount = 1
texture = ExtResource("20_ah2jj")
one_shot = true
explosiveness = 0.8
process_material = SubResource("ParticleProcessMaterial_nievx")

[connection signal="timeout" from="EnemyStateMachine/Shoot/Timer" to="EnemyStateMachine/Shoot" method="_on_timer_timeout"]
